# wakareeru-inference

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements-image.txt  test_input.json
configs/: service_config.yaml
scripts/: analyze_classifier_confidence.py  smoke_test_handler.py
tests/: test_config.py  test_image_io.py  test_localization.py  test_postprocess.py
wakareeru_inference/: __init__.py  config.py  crop.py  detector.py  handler.py  image_io.py  postprocess.py  predict.py  preprocess.py  response_schema.py  service.py
